<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2 Doo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="app_long_name">2 Doo &#8212; The @pp that helps you get cr@p done!</string>
    <string name="app_description">The @pp that helps you get cr@p done!</string>
    <string name="about_button_text">About</string>
    <string name="about_dialog_title">About 2 Doo &#8212; The @pp that helps you get cr@p done!</string>
    <string name="new_list_button_text">New List</string>
    <string name="new_list_input_hint">enter name for your new list</string>
    <string name="list_long_click_dialog_title">Rearrange your cr@p!</string>
    <string name="about_text">
		<p>Need to keep track of work to be done? Use a <b>2 Doo</b> list.\n</p>
		<p>Trying to get rid of some nasty habits? Use a <b>Don\'t Doo</b> list.</p>\n
		<p>Regret something you did? Use a <b>UnDoo</b> list.</p>\n
		<p>Reuse existing <b>2 Doo</b> lists with <b>ReDoo.</b></p>\n\n
		<p><i>You\'ve got to manage a lot of crap in your life &#8212; We help you doo it!</i></p>
	</string>
	
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="redoo">ReDoo</string>
    
    <string name="standard_group_key">standard</string>
    <string name="enterprise_group_key">enterprise</string>
    <string name="literary_group_key">literary</string>
    <string name="standard_group_title">Standard Options</string>
    <string name="enterprise_group_title">Enterprise Options</string>
    <string name="literary_group_title">Literary Options</string>
	
	<string name="twodoo_key">twodoo</string>
	<string name="dontdoo_key">dontdoo</string>
	<string name="undoo_key">undo</string>
	<string name="cantdoo_key">cantdoo</string>
	<string name="candoo_key">candoo</string>
	<string name="bartleby_key">bartelby</string>
	<string name="hamlet_key">hamlet</string>
	<string name="twodoo_title">2 Doo</string>
	<string name="dontdoo_title">Don\'t Doo</string>
	<string name="undoo_title">Un Doo</string>
	<string name="cantdoo_title">Can\'t Doo</string>
	<string name="candoo_title">Can Doo</string>
	<string name="bartleby_title">Bartleby</string>
	<string name="hamlet_title">Hamlet</string>
	<string name="twodoo_summary">Things you want to do.</string>
	<string name="dontdoo_summary">Habits you want to break.</string>
	<string name="undoo_summary">Things you regret doing.</string>
	<string name="cantdoo_summary">Things you can\'t do.</string>
	<string name="candoo_summary">Things you actually can do.</string>
	<string name="bartleby_summary">Things you would prefer not to do.</string>
	<string name="hamlet_summary">2 Doo or not 2 Doo?</string>
	<string name="twodoo_icon">@drawable/twodoo_launcher</string>
	<string name="dontdoo_icon">@drawable/twodoo_launcher</string>
	<string name="undoo_icon">@drawable/twodoo_launcher</string>
	<string name="cantdoo_icon">@drawable/twodoo_launcher</string>
	<string name="candoo_icon">@drawable/twodoo_launcher</string>
	<string name="bartleby_icon">@drawable/twodoo_launcher</string>
	<string name="hamlet_icon">@drawable/twodoo_launcher</string>
	<string name="twodoo_default">true</string>
	<string name="dontdoo_default">true</string>
	<string name="undoo_default">true</string>
	<string name="cantdoo_default">false</string>
	<string name="candoo_default">false</string>
	<string name="bartleby_default">false</string>
	<string name="hamlet_default">false</string>
	<!--  
	<string name="twodoo_array" key="@array/twodoo"></string>
	<string name="dontdoo_array" key="@array/dontdoo"></string>
	<string name="undoo_array" key="@array/undoo"></string>
	<string name="cantdoo_array" key="@array/cantdoo"></string>
	<string name="candoo_array" key="@array/candoo"></string>
	<string name="bartleby_array" key="@array/bartleby"></string>
	<string name="hamlet_array" key="@array/hamlet"></string>
	-->
	<string name="settings_label">Settings &#8230;</string>
	<string name="settings_title">2 Doo settings</string>
	<string name="settings_shortcut">s</string>
</resources>