<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip">
	<RelativeLayout android:id="@+id/list_menu_layout"
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<Button
	        android:id="@+id/twodoo_Button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/twodoo_title" >
	    </Button>
	    <Button
	        android:id="@+id/dontdoo_Button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/dontdoo_title" 
	        android:layout_below="@id/twodoo_Button">
	    </Button>
	    <Button
	        android:id="@+id/undoo_Button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/undoo_title" 
	        android:layout_below="@id/dontdoo_Button">
	    </Button>
	</RelativeLayout>
</ScrollView>