<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip">
	<RelativeLayout android:id="@+id/list_menu_layout"
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<Button
	        android:id="@+id/rename_List_Button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/rename" >
	    </Button>
	    <Button
	        android:id="@+id/delete_List_Button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/delete" 
	        android:layout_below="@id/rename_List_Button">
	    </Button>
	    <Button
	        android:id="@+id/redoo_List_Button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/redoo" 
	        android:layout_below="@id/delete_List_Button">
	    </Button>
	</RelativeLayout>
</ScrollView>